src/test/deca/context/invalid/fonction/appel-method-not-in-class.deca
// Programme de test d'appel de methode qui n'est pas dans une classe

class A {
    void method() {
    }
}

class B {
}

{
    B b = new B();
    b.method();
}